# ai-studio-cookbook

./: .gitignore  AddLora.ipynb  LICENSE  README.md  batch.ipynb  env_sample.txt  guided_json.ipynb  image2video_higgsfield.ipynb  image_lora.ipynb  setup-dev-env.md  tools_function.ipynb
agents/: README.md
agents/agno-agents-examples/: README.md  agno_knowledgebase_agent.ipynb  agno_multi_agent.ipynb  agno_websearch_agent.ipynb  main.py  pyproject.toml  requirements.txt
agents/agno-hacker-news-agent/: README.md  pyproject.toml
agents/agno/starter/: README.md
agents/aws-strands-weather-agent/: README.md  env.example  requirements.txt
agents/camel-ai-model-comparison-agent/: README.md
agents/crewai/: README.md
agents/crewai-research-agent/: README.md  agent.ipynb
agents/crewai/research-agent/: agent.ipynb  pyproject.toml
agents/crewai/simple-agent/: README.md  agent.ipynb  agent.py  requirements.txt
agents/crewai/starter-agent/: README.md  agent.ipynb  agent.py
agents/google-adk-tool-calling/: agent.py  pyproject.toml
agents/google-adk/tool-calling/: README.md
agents/llamaindex-task-timer/: README.md  agent.py  pyproject.toml
agents/n8n-ecommerce-analytics-agent/: Cookbook.md  README.md  ecommerce-analytics-agent-workflow.json
agents/pydantic-weather-agent/: README.md  agent.py  env.example  pyproject.toml
agents/pydantic-weather-agent/notebook/: Nebius_Pydantic.ipynb
agents/universal-deep-research-nebius/: README.md  start.sh
api/: README.md  api_aisuite.ipynb  api_litellm.ipynb  api_llamaindex.ipynb  api_native.ipynb  requirements.txt
apps/: README.md
articles/: qwen3-2507.md
benchmarking/api-benchmarking-locust/: README.md  env.example  locust-nebius.conf  locust_test_nebius.py  pyproject.toml  requirements.txt  test_nebius_client.py
community/: README.md
community/openbench-evaluation-guide/: README.md
distillation/: README.md
distillation/distillation-1/: .gitignore  1_generate_synthetic_data.ipynb  2_fine_tuning.ipynb  2_training.ipynb  3_evaluate_model.ipynb  README.md  distillation-explained.md  pyproject.toml  requirements.txt
fun/: README.md
fun/pelican-riding-bicycle/: README.md  combine-images.sh  convert2png.sh
lora/lora-1/: README.md
models/: README.md  glm4.5.md  glm4.5_1.ipynb  gpt-oss.md  gpt_oss_1.ipynb  qwen3-2507.md  qwen3_2507_1.ipynb
rag/: README.md
rag/chat-with-pdf/: README.md  main.py  pyproject.toml
rag/content-gen-pipeline-qdrant/: README.md  docker-compose.yml  setup.sh
rag/content-gen-pipeline-qdrant/backend/: Dockerfile  env.example  package-lock.json  package.json
rag/rag-milvus-1/: 1_process_pdfs.ipynb  2_query_pdfs.ipynb  README.md  env.example  pyproject.toml  requirements.txt
rag/rag-milvus-1/images/: rag-1.excalidraw
rag/rag-pdf-llama-index/: README.md  pyproject.toml  rag_pdf_query.ipynb  requirements.txt
rag/support-agent-weaviate/: README.md  app.py  config.py  env.example  pyproject.toml  slack_bot.py  slack_test.py
rag/support-agent-weaviate/agents/: document_agent.py  embedding_agent.py  llm_agent.py  monitoring_agent.py  search_agent.py
rag/support-agent-weaviate/graph/: state.py  workflow.py
rag/support-agent-weaviate/services/: vector_service.py
rag/support-agent-weaviate/tools/: support_tools.py  tools_notion_and_cal.py
tool-calling/: README.md  function-calling-explained.md  function_calling_1.ipynb  requirements.txt
(+32 files in other folders)
