[project]
name = "agno-agents-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.2",
    "couchbase>=4.4.0",
    "ddgs>=9.2.3",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "openai>=1.95.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "yfinance>=0.2.65",
]
