[project]
name = "distillation-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
