[project]
name = "rag-milvus-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.13.1",
    "llama-index-embeddings-nebius>=0.4.0",
    "llama-index-llms-nebius>=0.2.0",
    "llama-index-vector-stores-milvus>=0.9.0",
    "openai>=1.99.9",
    "pymilvus>=2.6.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
