[project]
name = "rag-pdf-llama-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-embeddings-nebius>=0.3.1",
    "llama-index-llms-litellm>=0.5.1",
    "llama-index-llms-nebius>=0.1.2",
    "python-dotenv>=1.1.1",
]
