[project]
name = "rag-pdf-llama-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.7",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-embeddings-nebius>=0.3.1",
    "llama-index-llms-litellm>=0.5.1",
    "llama-index-llms-nebius>=0.1.2",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
